manifests/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis-deployment
  namespace: giropops-senhas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: nataliagranato/redis:84b04-20240824205221
        name: redis
        ports:
        - containerPort: 6379
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "0.1"
            memory: 128Mi
          requests:
            cpu: "0.1"
            memory: 128Mi
        volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis-pvc
            metadata:
              namespace: giropops-senhas
            spec:
              storageClassName: 'oci-bv'
              volumeName: 'redis'
