manifests/giropops-senhas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-service
  namespace: giropops-senhas
  labels:
    app.kubernetes.io/instance: giropops-senhas
    app.kubernetes.io/name: senhas
spec:
  selector:
    app.kubernetes.io/instance: giropops-senhas
    app.kubernetes.io/name: senhas
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
