manifests/giropops-senhas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: senhas
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app: giropops-senhas
  namespace: giropops-senhas

spec:
  ingressClassName: nginx
  rules:
  - host: senhas.nataliagranato.xyz
    http:
      paths:
      - backend:
          service:
            name: giropops-svc
            port:
              number: 5000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: giropops-svc
            port:
              number: 5000
        path: /health
        pathType: Prefix
      - backend:
          service:
            name: giropops-svc
            port:
              number: 5000
        path: /metrics
        pathType: Prefix
  tls:
  - hosts:
    - senhas.nataliagranato.xyz
    secretName: senhas.nataliagranato.xyz
